# HTTP-Interceptor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-cd.yaml
includes/: HttpClient.hpp  Logger.hpp  ProxyServer.hpp  Utils.hpp
src/: HttpClient.cpp  Interceptor.cpp  Logger.cpp  Router.cpp  Utils.cpp  main.cpp
tests/: test_isValidUrl.cpp  test_main.cpp
tests/HttpClient/: test_sendRequest.cpp
tests/utils/: test_extractHostFromUrl.cpp  test_isValidUrl.cpp
